Force accessibility tree layout when CSS transform changes

When a node's CSS transform changes, the accessibility tree should
perform a layout so that focus appears in the correct location.

R=dmazzoni@chromium.org, ikilpatrick@chromium.org

Bug: 610840
Test: DumpAccessibilityTreeTest.AccessibilityTransform
Change-Id: I2517358ea8f8b8a2b24c2daf358dca2058fe1c37
Reviewed-on: https://chromium-review.googlesource.com/1108393
Commit-Queue: James Wallace-Lee <jamwalla@chromium.org>
Reviewed-by: Ian Kilpatrick <ikilpatrick@chromium.org>
Reviewed-by: Dominic Mazzoni <dmazzoni@chromium.org>
Cr-Commit-Position: refs/heads/master@{#570135}
Former-commit-id: ecbec4ddb9743dc30861921350d0045efc949ee1